fix alignment issue on rating section

--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,7 @@ header {
     text-align: center;
     width: 80%;
     gap: 4rem;
+    padding: 8rem 0;
   }
   .rating__subheading {
     margin-top: 2rem;
