--- a/sass/components/_rating.scss
+++ b/sass/components/_rating.scss
@@ -52,6 +52,7 @@
     text-align: center;
     width: 80%;
     gap: 4rem;
+    padding: 8rem 0;
   }
   .rating__subheading {
     margin-top: 2rem;
